# Account_Research_Crew

./: .env.example  README.md  briefing.md  pyproject.toml
account_research_crew/: pyproject.toml
account_research_crew/src/account_research_crew/: crew.py  main.py
account_research_crew/src/account_research_crew/config/: agents.yaml  tasks.yaml
output/: Accenture_executive_briefing.md  Crew_AI_executive_briefing.md  NVIDIA_executive_briefing.md
src/account_research_crew/: crew.py  main.py
src/account_research_crew/config/: agents.yaml  tasks.yaml
