[project]
name = "account_research_crew"
version = "0.1.0"
description = "account_research_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
account_research_crew = "account_research_crew.main:run"
run_crew = "account_research_crew.main:run"
train = "account_research_crew.main:train"
replay = "account_research_crew.main:replay"
test = "account_research_crew.main:test"
run_with_trigger = "account_research_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
